<resources>
    <string name="app_name">MySocialnet</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_limit">Password must be 6 12 characters</string>
    <string name="login">login</string>
    <string name="login_uppercase">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name_required">Name is required</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="user_already_registered">User already registered</string>
    <string name="failed_to_load_images">Failed to load images</string>
    <string name="age">Age</string>
    <string name="user_already_exists">User already exists</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>